<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_first"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home" />

    <item
        android:id="@+id/fragment_second"
        android:icon="@drawable/ic_baseline_calendar_month"
        android:title="@string/calendar" />

    <item
        android:id="@+id/fragment_third"
        android:icon="@drawable/ic_baseline_empty"
        android:title="@string/empty" />

    <item
        android:id="@+id/fragment_fourth"
        android:icon="@drawable/ic_baseline_analytics"
        android:title="@string/progress" />

    <item
        android:id="@+id/fragment_fifth"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/setting" />

</menu>
